--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header img{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3%;
+    padding: 1%;
     width: 100%;
 }
 
@@ -155,7 +155,7 @@ ul {
     align-items: center;
     width: 100%;
     padding: 4% 8%;
-    font: var(--fonte-style-primary);
+    font: var(--fonte-style-secudary);
     font-size: 1.25rem;
     color: var(--color-white);
     background-color: var(--color-button);
