--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 header img{
-    height: 35%;
+    width: 25%;
 }
 
 .main-content {
@@ -52,13 +52,14 @@ header img{
 /* Seção de entrada */
 .input-section {
     flex: 60%;
+    height: 60%;
     background-color: var(--color-secondary);
     margin: 1%;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1%;
+    padding: 3% 1%;
     width: 100%;
 }
 
@@ -192,5 +193,4 @@ input:focus{
 .rodape a{
     color: var(--color-text);
     font-weight: bold;
-    text-decoration: none;
 }
